Day-3/Synthesis/exercise-guestbook-go/redis-master-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
    role: master
  name: redis-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
      - image: redis:6.2-alpine
        name: redis-master
        ports:
        - containerPort: 6379
          name: redis-server
          protocol: TCP
