Day-3/Synthesis/exercise-guestbook-go/redis-slave-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
    role: slave
  name: redis-slave
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: slave
  template:
    metadata:
      labels:
        app: redis
        role: slave
    spec:
      containers:
      - image: rvennam/redis-slave:v2
        imagePullPolicy: IfNotPresent
        name: redis-slave
        ports:
        - containerPort: 6379
          name: redis-server
          protocol: TCP
