Day-3/Synthesis/exercise-guestbook-go/guestbook-service-cip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: guestbook
  name: guestbook
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http-server
  selector:
    app: guestbook
  type: NodePort
