Day-3/Synthesis/exercise-guestbook-go/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  defaultBackend:
    service:
      name: guestbook
      port:
        number: 80
